Fix dropdown menu alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,6 +281,7 @@ textarea {
 
 #age {
     height: 3.5em;
+    width: 100%;
     margin: 0 2em 1em 0;
     display: block;
     min-height: 1.2em;
